--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -342,7 +342,8 @@
     "startByCreating": "ابدأ بإنشاء مجموعة لرحلتك أو مناسبتك أو نفقاتك المشتركة. يستغرق الأمر بضع ثوانٍ فقط!",
     "createFirstGroup": "إنشاء مجموعتك الأولى",
     "noExpensesYet": "لا توجد نفقات بعد",
-    "personal": "شخصي"
+    "personal": "شخصي",
+    "search": "ابحث عن المجموعات..."
   },
   "editGroup": {
     "title": "تعديل المجموعة",
