Adding the user name to be unique

--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -29,6 +29,8 @@
     "username_required": "Le nom d'utilisateur est requis",
     "username_min_length": "Le nom d'utilisateur doit contenir au moins 3 caractères",
     "username_invalid": "Le nom d'utilisateur ne peut contenir que des lettres, des chiffres et des traits de soulignement",
+    "username_taken": "Ce nom d'utilisateur est déjà pris",
+    "username_available": "Nom d'utilisateur disponible",
     "email_required": "L'email est requis",
     "email_invalid": "Veuillez saisir une adresse email valide",
     "password_required": "Le mot de passe est requis",
