--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -20,6 +20,8 @@
     "username_required": "اسم المستخدم مطلوب",
     "username_min_length": "يجب أن يحتوي اسم المستخدم على 3 أحرف على الأقل",
     "username_invalid": "يمكن أن يحتوي اسم المستخدم على أحرف وأرقام وخطوط سفلية فقط",
+    "username_taken": "اسم المستخدم هذا مُستخدم بالفعل",
+    "username_available": "اسم المستخدم متاح",
     "email_required": "البريد الإلكتروني مطلوب",
     "email_invalid": "يرجى إدخال عنوان بريد إلكتروني صحيح",
     "password_required": "كلمة المرور مطلوبة",
