--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -434,7 +434,29 @@
     "books": "كتب",
     "hotel": "فندق",
     "cleaning": "تنظيف",
-    "rent": "إيجار"
+    "rent": "إيجار",
+    "selectCategory": "اختر فئة",
+    "searchCategories": "البحث في الفئات...",
+    "noCategoriesFound": "لم يتم العثور على فئات",
+    "tryDifferentSearch": "جرب مصطلح بحث مختلف",
+    "transportation": "المواصلات",
+    "utilities": "المرافق",
+    "taxes": "الضرائب",
+    "gifts": "هدايا",
+    "car": "سيارة",
+    "gadgets": "أجهزة",
+    "subscriptions": "اشتراكات",
+    "baby": "طفل",
+    "parking": "موقف سيارات",
+    "fuel": "وقود",
+    "publicTransport": "النقل العام",
+    "pets": "حيوانات أليفة",
+    "flight": "رحلة",
+    "courses": "دورات",
+    "music": "موسيقى",
+    "games": "ألعاب",
+    "sports": "رياضة",
+    "hobbies": "هوايات"
   },
 
   "errors": {
